; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/software/extr_nvc0.c_nvc0_software_mthd_flip.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/software/extr_nvc0.c_nvc0_software_mthd_flip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nvc0_software_chan = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (i32)*, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, i32, i8*, i32)* @nvc0_software_mthd_flip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvc0_software_mthd_flip(%struct.nouveau_object* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nouveau_object*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.nvc0_software_chan*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load %struct.nouveau_object*, %struct.nouveau_object** %6, align 8
  %12 = getelementptr inbounds %struct.nouveau_object, %struct.nouveau_object* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @nv_engctx(i32 %13)
  %15 = inttoptr i64 %14 to i8*
  %16 = bitcast i8* %15 to %struct.nvc0_software_chan*
  store %struct.nvc0_software_chan* %16, %struct.nvc0_software_chan** %10, align 8
  %17 = load %struct.nvc0_software_chan*, %struct.nvc0_software_chan** %10, align 8
  %18 = getelementptr inbounds %struct.nvc0_software_chan, %struct.nvc0_software_chan* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32 (i32)*, i32 (i32)** %19, align 8
  %21 = icmp ne i32 (i32)* %20, null
  br i1 %21, label %22, label %32

22:                                               ; preds = %4
  %23 = load %struct.nvc0_software_chan*, %struct.nvc0_software_chan** %10, align 8
  %24 = getelementptr inbounds %struct.nvc0_software_chan, %struct.nvc0_software_chan* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32 (i32)*, i32 (i32)** %25, align 8
  %27 = load %struct.nvc0_software_chan*, %struct.nvc0_software_chan** %10, align 8
  %28 = getelementptr inbounds %struct.nvc0_software_chan, %struct.nvc0_software_chan* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i32 %26(i32 %30)
  store i32 %31, i32* %5, align 4
  br label %35

32:                                               ; preds = %4
  %33 = load i32, i32* @EINVAL, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %32, %22
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i64 @nv_engctx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
